Bug 116646 - Linux: Slideshows with Transitions have page swap rendering issues
Summary: Linux: Slideshows with Transitions have page swap rendering issues
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-03-27 05:42 UTC by Luke
Modified: 2018-03-29 08:57 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Slideshow with transitions (804.34 KB, application/vnd.oasis.opendocument.presentation)
2018-03-27 05:42 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2018-03-27 05:42:51 UTC
Created attachment 140901 [details]
Slideshow with transitions

Steps to reproduce:
1. Open in Impress 
2. Start the slideshow
3. Press the spacebar to go page 2

Expected smooth Rendering like windows

Actual results:
First slide interferes with subsequent transition animations.

Version: 6.1.0.0.alpha0+ Build ID: a488c7ad2763b944713997911c1ddb0315d8c93f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Bad

Version: 6.0.2.1.0+ Build ID: 6.0.2-1
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Good
Comment 1 Xisco Faulí 2018-03-27 11:20:09 UTC
This is what I've seen:
If space key is use to move to slide 2, when it has to be displayed, the first slide is displayed instead.

Regression introduced by:

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-16 14:58:59 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-03-16 19:25:48 +0100
commit 5b75a1697250d8b2b6003c37067f39270a5ad828 (patch)
tree 14d1fddc6f14707c64c220ee738e25567037de18
parent 92dc87cbac74c1be260534b5e38088c44515a47b (diff)
move cairo extract bitmap code from canvas to vcl
part of making GetMask/GetAlpha an internal detail of vcl

Bisected with: bibisect-linux64-6.1

Adding Cc: to Noel Grandin
Comment 2 Noel Grandin 2018-03-28 13:34:27 UTC
Could someone try
    https://gerrit.libreoffice.org/52005
and see if that helps?

Can't reproduce this myself and can't imagine what else it could be.
Comment 3 Xisco Faulí 2018-03-28 13:59:50 UTC
Compiling master... I'll test it once it finishes...
Comment 4 Xisco Faulí 2018-03-28 20:14:29 UTC
(In reply to Noel Grandin from comment #2)
> Could someone try
>     https://gerrit.libreoffice.org/52005
> and see if that helps?
> 
> Can't reproduce this myself and can't imagine what else it could be.

Yes, it does fix the issue!! Thank you very much for the blind fix ;-)
Comment 5 Noel Grandin 2018-03-28 20:16:52 UTC
thanks for testing
Comment 6 Commit Notification 2018-03-28 20:17:16 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=290a954a355852a967a0e7e8a28447b0b9d2a46b

tdf#116646 Slideshows with transitions page swap rendering issues

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2018-03-29 08:57:56 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 484fe43b5e9f3696d26b8c0452aab6fd14e10772
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group