tdf#116646 Slideshows with transitions page swap rendering issues

regression from
    commit 5b75a1697250d8b2b6003c37067f39270a5ad828
    move cairo extract bitmap code from canvas to vcl

Change-Id: Ic8d7cd9d54010ae272073877da18a985e931e22a
Reviewed-on: https://gerrit.libreoffice.org/52005
Tested-by: Jenkins <ci@libreoffice.org>
Tested-by: Xisco Faulí <xiscofauli@libreoffice.org>
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>